--- a/config.json
+++ b/config.json
@@ -1,22 +1,14 @@
 {
     "rushtime": "2021-11-28 12:00:00",
     "user_info": {
-        "username": "",
-        "password": "",
-        "phone": ""
+        "username": "2101213473",
+        "password": "Lfn873833451",
+        "phone": "17621779630"
     },
     "order": {
         "羽毛球": [
-            "2021-11-28 11:00-12:00",
-            "2021-11-29 19:00-20:00",
-            "2021-11-30 9:00-10:00",
-            "2021-11-30 10:00-11:00",
-            "2021-11-30 11:00-12:00",
-            "2021-12-01 12:00-13:00"
-        ],
-        "篮球": [
-            "2021-11-28 11:00-12:00",
-            "2021-11-29 19:00-20:00"
+            "2022-3-29 20:00-21:00",
+            "2022-3-31 19:00-20:00"
         ]
     }
 }
