--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
     "rushtime": "2021-11-28 12:00:00",
     "user_info": {
-        "username": "2101213473",
-        "password": "Lfn873833451",
-        "phone": "17621779630"
+        "username": "",
+        "password": "",
+        "phone": ""
     },
     "order": {
         "羽毛球": [
